--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  @font-face {
+    font-family: Poppins-Regular;
+    src: url('https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap');
+  }
+}
