--- a/src/assets/css/main/layout/layout.css
+++ b/src/assets/css/main/layout/layout.css
@@ -2,7 +2,7 @@
 @import './layout-variables.css';
 @import './generic/generic-base.css';
 @import 'header/header-base.css';
-/*@import 'sidebar/sidebar-base';*/
+@import 'sidebar/sidebar-base.css';
 @import './main/main-base.css';
 /*@import 'footer/footer-base';
 @import 'elements/page-title/page-title-base';
