--- a/src/assets/css/main/layout/sidebar/_sidebar-base.scss
+++ b/src/assets/css/main/layout/sidebar/_sidebar-base.scss
@@ -82,15 +82,15 @@ $sidebar-box-shadow: 7px 0 60px rgba(0, 0, 0, 0.05);
   width: auto !important;
   padding: 0 $layout-spacer-x $layout-spacer-x;
 
-  & .vsm-item {
+  & .vsm--item {
     position: relative;
     display: block;
     padding: 0.1rem 0;
   }
 
-  & .vsm-item.first-item {
-    & > .vsm-link {
-      & > .vsm-icon {
+  & .vsm--item_level1 {
+    & > .vsm--link {
+      & > .vsm--icon {
       }
       &:after {
         content: '';
@@ -100,9 +100,9 @@ $sidebar-box-shadow: 7px 0 60px rgba(0, 0, 0, 0.05);
     }
   }
 
-  & .vsm-item.mobile-item {
-    & > .vsm-link {
-      & > .vsm-icon {
+  & .vsm--item.mobile-item {
+    & > .vsm--link {
+      & > .vsm--icon {
         height: 30px;
         line-height: 30px;
         width: 30px;
@@ -117,21 +117,21 @@ $sidebar-box-shadow: 7px 0 60px rgba(0, 0, 0, 0.05);
     color: $primary;
   }
 
-  & .vsm-item.active-item {
-    & > .vsm-link {
+  & .vsm--item_active {
+    & > .vsm--link {
       font-weight: 600;
       @extend %side-link-hover;
     }
   }
 
-  & .vsm-item.parent-active-item,
-  .vsm-item.open-item {
-    & > .vsm-link {
+  & .vsm--item.parent-active-item,
+  .vsm--item.vsm--arrow_open {
+    & > .vsm--link {
       font-weight: 600;
     }
   }
 
-  & .vsm-link {
+  & .vsm--link {
     display: block;
     line-height: 2.4rem;
     height: 2.4rem;
@@ -153,12 +153,12 @@ $sidebar-box-shadow: 7px 0 60px rgba(0, 0, 0, 0.05);
     }
   }
 
-  & .vsm-title {
+  & .vsm--title {
     white-space: nowrap;
     position: relative;
   }
 
-  & .vsm-icon {
+  & .vsm--icon {
     text-align: center;
     width: 34px;
     height: 34px;
@@ -172,7 +172,7 @@ $sidebar-box-shadow: 7px 0 60px rgba(0, 0, 0, 0.05);
     transition: color 300ms;
   }
 
-  & .vsm-arrow {
+  & .vsm--arrow {
     text-align: center;
     width: 34px;
     height: 34px;
@@ -186,17 +186,18 @@ $sidebar-box-shadow: 7px 0 60px rgba(0, 0, 0, 0.05);
     opacity: 0.3;
     transition: all 300ms;
     transform: rotate(-90deg);
+    left: math.div($app-sidebar-width, 2) + 30px;
 
     &:after {
       content: '\e688';
       font-family: 'Pe-icon-7-stroke';
     }
-    &.open-arrow {
+    &.vsm--arrow_open {
       transform: rotate(0deg);
     }
   }
 
-  & .vsm-dropdown {
+  & .vsm--dropdown {
     position: relative;
 
     &::before {
@@ -211,16 +212,17 @@ $sidebar-box-shadow: 7px 0 60px rgba(0, 0, 0, 0.05);
       border-radius: 15px;
     }
 
-    .vsm-list {
+    .vsm--link_level-2 {
       padding: (math.div($layout-spacer-x, 2)) 0 (math.div($layout-spacer-x, 2))
         $layout-spacer-x * 1.5;
     }
 
-    .vsm-item {
-      .vsm-link {
+    .vsm--item {
+      .vsm--link {
         padding: 0 (math.div($layout-spacer-x, 1.5));
         height: 2.1rem;
         line-height: 2.1rem;
+        margin-left: $layout-spacer-x;
       }
     }
   }
@@ -253,7 +255,7 @@ $sidebar-box-shadow: 7px 0 60px rgba(0, 0, 0, 0.05);
     }
   }
 
-  & .vsm-header {
+  & .vsm--header {
     text-transform: uppercase;
     font-size: $font-size-xs;
     margin: (math.div($layout-spacer-x, 2)) 0;
@@ -263,7 +265,7 @@ $sidebar-box-shadow: 7px 0 60px rgba(0, 0, 0, 0.05);
     position: relative;
   }
 
-  & .collapse-btn {
+  & .vsm--toggle-btn {
     display: none;
   }
 }
