--- a/src/assets/css/main/layout/sidebar/modifiers/_closed-sidebar.scss
+++ b/src/assets/css/main/layout/sidebar/modifiers/_closed-sidebar.scss
@@ -24,11 +24,11 @@
     .v-sidebar-menu {
       padding: 0 (math.div($layout-spacer-x, 3));
 
-      .vsm-dropdown {
+      .vsm--dropdown {
         display: none;
       }
 
-      .vsm-header {
+      .vsm--header {
         text-indent: -999em;
 
         &::before {
@@ -43,13 +43,14 @@
         }
       }
 
-      .vsm-arrow,
-      .vsm-title {
+      .vsm--arrow,
+      .vsm--title {
         display: none;
       }
 
-      .vsm-icon {
-        left: 50%;
+      .vsm--icon {
+        // left: 50%;
+        left: math.div($app-sidebar-width-collapsed, 2)-5px;
         margin-left: -20px;
       }
     }
@@ -97,12 +98,12 @@
       .v-sidebar-menu {
         padding: 0 $layout-spacer-x $layout-spacer-x;
 
-        .vsm-arrow,
-        .vsm-title {
+        .vsm--arrow,
+        .vsm--title {
           display: block;
         }
 
-        .vsm-header {
+        .vsm--header {
           text-indent: 0px;
 
           &::before {
@@ -110,12 +111,12 @@
           }
         }
 
-        .vsm-icon {
+        .vsm--icon {
           left: 5px;
           margin-left: 0;
         }
 
-        .vsm-dropdown {
+        .vsm--dropdown {
           display: block;
         }
       }
