--- a/src/assets/css/main/layout/sidebar/_sidebar-base.scss
+++ b/src/assets/css/main/layout/sidebar/_sidebar-base.scss
@@ -205,7 +205,7 @@ $sidebar-box-shadow: 7px 0 60px rgba(0, 0, 0, 0.05);
       height: 100%;
       opacity: 1;
       width: 3px;
-      background: $dropdown-link-hover-bg;
+      background: $primary;
       position: absolute;
       left: 20px;
       top: 0;
